feat: create simple editable element

--- a/examples/simple-editable/src/index.html
+++ b/examples/simple-editable/src/index.html
@@ -6,7 +6,12 @@
     <link rel="stylesheet" href="index.css">
     <script type="module" src="index.ts"></script>
   </head>
-  <body>
-    <h1>Hello, World!</h1>
+  <body class="h-screen">
+    <div class="w-full h-full flex justify-center items-center">
+      <div class="w-11/12 m-4">
+        <div id="editor" class="border border-slate-600 rounded-sm px-2 py-1 w-full flex flex-col gap-2">
+        </div>
+      </div>
+    </div>
   </body>
 </html>
