feat: prevent new line on empty lines

--- a/examples/simple-editable/src/index.html
+++ b/examples/simple-editable/src/index.html
@@ -8,9 +8,10 @@
   </head>
   <body class="h-screen">
     <div class="w-full h-full flex justify-center items-center">
-      <div class="w-11/12 m-4">
+      <div class="flex flex-col gap-2 w-11/12">
+        <h2>Simple Editor</h2>
         <div id="editor" class="border border-slate-600 rounded-md px-2 py-1 w-full flex flex-col gap-2">
-        </div>
+      </div>
       </div>
     </div>
   </body>
